--- a/catalog-service/src/main/resources/application-prod.yml
+++ b/catalog-service/src/main/resources/application-prod.yml
@@ -1,4 +1,10 @@
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: ${NACOS_SERVER_ADDR:nacos:8848}
+        namespace: dev
+        group: COURSEHUB_GROUP
   datasource:
     url: ${DB_URL:jdbc:mysql://catalog-db:3306/catalog_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     driver-class-name: com.mysql.cj.jdbc.Driver
