--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -6,6 +6,26 @@ spring:
     name: catalog-service
   profiles:
     active: dev
+  config:
+    import: optional:nacos:catalog-service
+  cloud:
+    nacos:
+      server-addr: ${NACOS_SERVER_ADDR:localhost:8848}
+      username: nacos
+      password: nacos
+      discovery:
+        server-addr: ${NACOS_SERVER_ADDR:localhost:8848}
+        namespace: dev
+        group: COURSEHUB_GROUP
+        ephemeral: true
+        heart-beat-interval: 5000
+        heart-beat-timeout: 15000
+        metadata:
+          version: 1.0.0
+          region: default
+        username: nacos
+        password: nacos
+        enabled: true
   datasource:
     url: jdbc:mysql://localhost:3306/catalog_db?useSSL=false&serverTimezone=UTC
     username: catalog_user
@@ -23,7 +43,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,nacos-discovery
   endpoint:
     health:
       show-details: always
