--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,31 @@ volumes:
     name: enrollment-mysql-data
 
 services:
+  # Nacos 服务注册中心
+  nacos:
+    image: nacos/nacos-server:v3.1.0
+    container_name: nacos
+    restart: unless-stopped
+    environment:
+      MODE: standalone
+      NACOS_AUTH_ENABLE: "false"
+      NACOS_AUTH_TOKEN: "SecretKey012345678901234567890123456789012345678901234567890="
+      NACOS_AUTH_IDENTITY_KEY: "nacos"
+      NACOS_AUTH_IDENTITY_VALUE: "nacos"
+      TZ: Asia/Shanghai
+    ports:
+      - "8848:8848"  # Nacos 服务端口
+      - "8849:8080"  # Nacos 控制台端口(映射到主机 8849 端口)
+      - "9848:9848"  # gRPC 端口
+    networks:
+      - course-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8848/nacos/"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+
   # 课程目录数据库
   catalog-db:
     image: mysql:8.4
@@ -81,10 +106,13 @@ services:
       DB_URL: jdbc:mysql://catalog-db:3306/catalog_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       DB_USERNAME: catalog_user
       DB_PASSWORD: catalog_pass
+      NACOS_SERVER_ADDR: nacos:8848
       TZ: Asia/Shanghai
     ports:
       - "8081:8081"
     depends_on:
+      nacos:
+        condition: service_healthy
       catalog-db:
         condition: service_healthy
     networks:
@@ -109,11 +137,13 @@ services:
       DB_URL: jdbc:mysql://enrollment-db:3306/enrollment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
       DB_USERNAME: enrollment_user
       DB_PASSWORD: enrollment_pass
-      CATALOG_SERVICE_URL: http://catalog-service:8081
+      NACOS_SERVER_ADDR: nacos:8848
       TZ: Asia/Shanghai
     ports:
       - "8082:8082"
     depends_on:
+      nacos:
+        condition: service_healthy
       enrollment-db:
         condition: service_healthy
       catalog-service:
