--- a/enrollment-service/src/main/resources/application-prod.yml
+++ b/enrollment-service/src/main/resources/application-prod.yml
@@ -1,4 +1,10 @@
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: ${NACOS_SERVER_ADDR:nacos:8848}
+        namespace: dev
+        group: COURSEHUB_GROUP
   datasource:
     url: ${DB_URL:jdbc:mysql://enrollment-db:3306/enrollment_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -19,10 +25,6 @@ spring:
     properties:
       hibernate:
         format_sql: false
-
-# 课程目录服务地址配置（Docker环境）
-catalog-service:
-  url: ${CATALOG_SERVICE_URL:http://catalog-service:8081}
 
 logging:
   level:
