feat: 添加 OpenFeign 服务调用与熔断降级功能
- 集成 OpenFeign 替代 RestTemplate
- 实现 Fallback 降级处理机制
- 配置 Resilience4j 熔断器
- 添加 week08 实验文档
- 多实例部署测试负载均衡

--- a/enrollment-service/pom.xml
+++ b/enrollment-service/pom.xml
@@ -95,6 +95,25 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
         
+        <!-- OpenFeign -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        
+        <!-- Resilience4j 熔断器 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+        
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
