--- a/enrollment-service/src/main/resources/application-prod.yml
+++ b/enrollment-service/src/main/resources/application-prod.yml
@@ -30,3 +30,5 @@ logging:
   level:
     org.hibernate.SQL: WARN
     com.zjgsu.wy.enrollment: INFO
+    com.zjgsu.wy.enrollment.client: INFO
+    feign: INFO
