--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ volumes:
     name: catalog-mysql-data
   enrollment-data:
     name: enrollment-mysql-data
+  user-data:
+    name: user-mysql-data
 
 services:
   # Nacos 服务注册中心
@@ -80,6 +82,34 @@ services:
       - "3308:3306"
     volumes:
       - enrollment-data:/var/lib/mysql
+    networks:
+      - course-network
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --mysql-native-password=ON
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot_password"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  # 用户数据库
+  user-db:
+    image: mysql:8.4
+    container_name: user-db
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: user_db
+      MYSQL_USER: user_user
+      MYSQL_PASSWORD: user_pass
+      TZ: Asia/Shanghai
+    ports:
+      - "3309:3306"
+    volumes:
+      - user-data:/var/lib/mysql
     networks:
       - course-network
     command:
@@ -216,6 +246,69 @@ services:
       - course-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8082/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+
+  # 用户服务
+  user-service:
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    image: user-service:2.0.0
+    container_name: user-service
+    restart: unless-stopped
+    environment:
+      SERVER_PORT: 8084
+      SPRING_PROFILES_ACTIVE: prod
+      DB_URL: jdbc:mysql://user-db:3306/user_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+      DB_USERNAME: user_user
+      DB_PASSWORD: user_pass
+      NACOS_SERVER_ADDR: nacos:8848
+      TZ: Asia/Shanghai
+    depends_on:
+      nacos:
+        condition: service_healthy
+      user-db:
+        condition: service_healthy
+    networks:
+      - course-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8084/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
+
+  # API Gateway 网关服务
+  gateway-service:
+    build:
+      context: ./gateway-service
+      dockerfile: Dockerfile
+    image: gateway-service:2.0.0
+    container_name: gateway-service
+    restart: unless-stopped
+    environment:
+      SERVER_PORT: 8090
+      SPRING_PROFILES_ACTIVE: prod
+      NACOS_SERVER_ADDR: nacos:8848
+      TZ: Asia/Shanghai
+    ports:
+      - "8090:8090"
+    depends_on:
+      nacos:
+        condition: service_healthy
+      user-service:
+        condition: service_started
+      catalog-service-1:
+        condition: service_started
+      enrollment-service:
+        condition: service_started
+    networks:
+      - course-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8090/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
